# MethylomeMiner

./: .gitignore  README.md  pyproject.toml
methylome_miner/: backend.py  loading.py  methylome_miner.py  preprocessing.py
src/methylome_miner/: backend.py  core_methylome_miner.py  loading.py  methylome_miner.py  preprocessing.py
tests/: correct_bed_01.bed  correct_bed_01.pkl  correct_bed_02_strand+.bed  correct_bed_03_strand-.bed  correct_bed_04_all_methylations.bed  incorrect_bed_01_sep.bed  incorrect_bed_01_sep.pkl  incorrect_bed_02_col0_contig.bed  incorrect_bed_03_col1_index.bed  incorrect_bed_04_col2_position.bed  incorrect_bed_05_col3_methylation.bed  incorrect_bed_06_col4_coverage.bed  incorrect_bed_07_col9_stats.bed  test_load_bed_file.py  test_loading.py
